# daq-ensayos-traccion

./: .gitignore  CMakeLists.txt  README.md
EnsayosTraccionUAL/: EnsayosTraccionUAL.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
